0.9-14
- subset.topo() added
- read.topo() now handles GEBCO netcdf files
- decimate() now handles topo objects
- reverse oceColorsGebco colours for water
- coding changes for an upcoming version of R
- drawIsopycnals() and plotTS(): improve isopycnal labels
- ctdDecimate() handles new method 'unesco'
- coastline improvements (now 3 resolutions)
- webtide() improvements
- read.observatory() added
- read.ctd.itp() added
- mapImage() speeded up (60X in 1deg SST example)
- binApply1D() and binApply2D() added
- binCount1D(), binMean1D(), binCount2D(), and binMean2D() added
- numberAsHMS() added
- gps data type added (provisionally)
- various functions: reorder arguments putting longitude before latitude
- magneticField() replaces magneticDeclination()
- ungrid() added
- mapPlot(): improve zone and meridian aesthetics
- detrend() returns list with detrend vector and coefs
- decodeTime() improvements
- interpBarnes() has new arg 'trim'
- standardDepths() added
- mapLongitudeLatitudeXY() added
- read.ctd.woce() now accepts a format used once by Arctic scientists
- swRrho() added
- plotProfile() now accepts type="o"
- read.adv.nortek(): read salinity
- ctdDecimate(): fix bug for NULL columns [issue 327]
- plot.section() now chooses best coastline file
- swPressure() added
- ctdFindProfiles() added
- as.ctd(): new arguments filename etc
- remove oceBisect(), which merely reproduces uniroot()
- move all data to library(ocedata)

0.9-13
- prepare for an upcoming release of R-devel

0.9-12
- move vignette source directory

0.9-11
- numberAsPOSIXct() now handles types "sas" and "spss"
- data(turbulence) added
- plot.echosounder(): use white for below-threshold values
- plot.echosounder(): add arg 'beam' to e.g. display Sv
- read.echosounder(): handle dual-beam and split-beam data
- read.echosounder(): decode bottom-pick 
- swSoundAbsorption()
- read.adp: improve doc regarding variable orientation of RDI files

0.9-10
- improve line breaks in some help pages (thanks, B. Ripley)
