@@ -101,6 +101,7 @@ export("+.section",
        "longitude<-",
        magneticField,
        makeFilter,
+       makePalette,
        makeSection,
        mapContour,
        mapImage,
