@@ -1,9 +1,11 @@
 \name{as.topo}
+
 \alias{as.topo}
+
 \title{Coerce data into topo dataset}
-\description{
-  Coerces a dataset  into a topo (topographic) dataset.
-}
+
+\description{Coerces a dataset  into a topo (topographic) dataset.}
+
 \usage{as.topo(longitude, latitude, z, filename="")}
 
 \arguments{
@@ -11,14 +13,14 @@
   \item{latitude}{a vector of latitudes}
   \item{z}{a matrix of heights (positive over land)}
   \item{filename}{name of data (used when called by \code{\link{read.topo}})}
-}}
+}
 
 \details{Mainly used by \code{\link{read.topo}}.}
 
 \value{An object of \code{\link[base]{class}} \code{"topo"}.}
 
-\seealso{
-  \code{\link{read.topo}}, which calls this.
-}
+\seealso{\code{\link{read.topo}}, which calls this.}
+
 \author{Dan Kelley}
+
 \keyword{misc}
